# pi-plus-phi

./: .buildinfo  README.rst  index.html  objects.inv  podcast_prompt  pyproject.toml  searchindex.js
.github/workflows/: action.yml
_sources/: index.rst.txt
_sources/modules/: index.rst.txt
aggie/: dash.html  dash2.py  dashboard.py
changelog/: index.html
docsrc/: conf.py  index.rst
docsrc/modules/: index.rst
genindex/: index.html
glossary/: index.html
gstream/: gs2.py  gs3.py  gs5.py  gs6.py  gstream.py  waves.sh
log/: atom.xml  index.html
log/2023/: index.html
log/2024/: index.html
log/23.327-054002/: index.html
log/23.329-065437/: index.html
log/23.330-051427/: index.html
log/23.331-043310/: index.html
log/23.333-053006/: index.html
log/23.335-082944/: index.html
log/23.337-121143/: index.html
log/23.340-142758/: index.html
log/23.353-132354/: index.html
log/24.050-052556/: index.html
log/24.084-191449/: index.html
log/24.089-092327/: index.html
log/24.096-115254/: index.html
log/24.100-105710/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
music/: intro.py  intro2.py  jog-your-memory-theme-E-180.mid  pi-plus-phi-conga-E-180.mid  pi-plus-phi-intro-E-180.mid  pi-plus-phi-intro1-E-180.mid  pi-plus-phi-intro2-E-180.mid  pi-plus-phi-intro3-E-180.mid  pi-plus-phi-intro4-E-180.mid
refs/: index.html
search/: index.html
splash/: gen_lst.sh  intro-dark.lst  intro-dark.mkv  intro.lst  intro.mkv  splash-v.mkv  splash.lst  splash.mkv  splash.mlt
todos/: index.html
usage/: index.html
(+62 files in other folders)
