[project]
name = "phiarchitect-pi-plus-phi"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
pi-plus-phi = "phiarchitect.pi-plus-phi.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phiarchitect"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "phiarchitect.pi-plus-phi.__version__"}

[project.urls]
"Website" = "https://phiarchitect.github.io/pi-plus-phi"
"Repository" = "https://github.com/phiarchitect/pi-plus-phi"
"Issues" = "https://github.com/phiarchitect/pi-plus-phi/issues"